# paretoVR

./: CMakeLists.txt  main.cpp  shape.cpp  shape.hpp
